src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Billing_Contact_Category__c</fullName>
        <label>Billing Contact Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Contact_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>News_Product_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>News Product Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Id</formula>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_in_Referrals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use in Referrals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Product__c</fullName>
        <description>Store the product name used for integration</description>
        <label>Website Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XFILES__gfId__c</fullName>
        <label>Google Drive Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Line__c</columns>
        <columns>PRODUCT2.EXTERNAL_ID</columns>
        <columns>PRODUCT2.EXTERNAL_DATA_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Line__c</columns>
        <columns>Use_in_Referrals__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.EXTERNAL_ID</columns>
        <columns>Website_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>